2004-05--4 Ian Rutt
 * Added upscale type to glimmer_interp.f90 and adjusted code 
  	accodingly. This was to enable the output of orography 
	at any resolution, as needed by the IGCM. 
 * ***NB*** This hasn't been tested properly yet, and the
	restarts have been broken by it, as there wasn't time
 	to add routine writing the upscaling to a restart file
 * Other minor formating changes, and addition of null pointer
	initialisation in some places

2004-04-27 Ian Rutt
 * Added doc comments to gmt.f90
 * Updated return value documentation throughout to !*RV
 * Other minor documentation and formatting changes
 * Moved glimmer_params initialisation to type definition
	in line with move to f95, and added null 
	initialisation for pointer arrays. (glimmer.f90)
 * Checked all elements of glimmer_params correctly
	included in restart routines and in consistent
	order. This should work OK, but hasn't been tested...

2004-04-26 Ian Rutt
 * Merged port_to_nag branch into HEAD
 * Extended interpolation routines (glimmer_interp.f90) to include 
	averaging high-resolution global field onto local
	grid. Also generalised find_ll_index somewhat to cope 
	with longitudes that have limits other than 0->360 
	(e.g. 180->360, 0->180). This may need more work, though.
 * Added matlab visualisation routines to the repository.

2004-04-19 Magnus Hagdorn
 * added ChangeLog
 * added NAG f95 makros
 * new build system (using Python script to work out module dependencies)
 * reduced number of time slices in example code to 10000yrs
 * made kind rk=dp (rather than 8)
 * (glimmer_outp.f90) integer array index
 * added SUN WS f95 makros
 * (glimmer_restart.f90, glimmer_interp.f90) workaround for SUN WS compiler bug
 * (glimmer.f90, glimmer_velo.f90) avoid division by zero
 * removed unused symbols and unused module symbols