@@ -1,4 +1,9 @@
-2004-05--4 Ian Rutt
+2004-05-05 Ian Rutt
+ * Realised several crucial aspects of the orography output were
+	missing, so added them. Produces orography as expected now,
+	but some structural changes are needed, I think.
+
+2004-05-04 Ian Rutt
  * Added upscale type to glimmer_interp.f90 and adjusted code 
   	accodingly. This was to enable the output of orography 
 	at any resolution, as needed by the IGCM. 
